packages/dartcv/src/gapi/gapi.h

// CvStatus *VecGMat_NewFromVec(VecMat vec, VecGMat *rval);

CvStatus *Prim_from_Circle(CvPoint center, Scalar color, int lt, int radius, int shift, int thick, Prim *rval);
CvStatus *Prim_from_FText(char *text, int text_len, CvPoint org, int fh, Scalar color, Prim *rval);
CvStatus *Prim_from_Image(CvPoint org, Mat img, Mat alpha, Prim *rval);
CvStatus *Prim_from_Line(Scalar color, int lt, CvPoint pt1, CvPoint pt2, int shift, int thick, Prim *rval);
CvStatus *Prim_from_Mosaic(int cellSz, int decim, CvRect mos, Prim *rval);
CvStatus *Prim_from_Poly(VecPoint points, Scalar color, int thick, int lt, int shift, Prim *rval);
CvStatus *Prim_from_Rect(Scalar color, int lt, CvRect rect, int shift, int thick, Prim *rval);
CvStatus *Prim_from_Text(bool bottom_left_origin, Scalar color, int ff, double fs, int lt, CvPoint org,
                         char *text, int text_len, int thick, Prim *rval);
CvStatus *VecPrim_Append(VecPrim vec, Prim p);
CvStatus *GArrayGArrayPoint_FromVec(VecVecPoint points, GArrayGArrayPoint *rval);
CvStatus *GArrayVec4i_FromVec(VecVec4i v, GArrayVec4i *rval);
CvStatus *GArrayPoint_FromVec(VecPoint v, GArrayPoint *rval);
CvStatus *GArrayPoint2f_FromVec(VecPoint v, GArrayPoint2f *rval);
CvStatus *GArrayPoint2i_FromVec(VecPoint v, GArrayPoint2i *rval);
CvStatus *GArrayPoint2d_FromVec(VecPoint v, GArrayPoint2d *rval);
CvStatus *GArrayPoint3f_FromVec(VecPoint v, GArrayPoint3f *rval);
CvStatus *GArrayPoint3d_FromVec(VecPoint v, GArrayPoint3d *rval);
CvStatus *GArrayPoint3i_FromVec(VecPoint v, GArrayPoint3i *rval);
CvStatus *GArrayPrim_FromVec(VecPrim v, GArrayPrim *rval);