packages/dartcv/lib/src/g/gapi.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv4/src/g/types.g.dart' as imp$1;

/// Native bindings for OpenCV - Gapi
///
class CvNativeGapi {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativeGapi(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativeGapi.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<CvStatus> GArrayGArrayPoint_FromVec(
    VecVecPoint points,
    ffi.Pointer<GArrayGArrayPoint> rval,
  ) {
    return _GArrayGArrayPoint_FromVec(
      points,
      rval,
    );
  }

  late final _GArrayGArrayPoint_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecVecPoint,
              ffi.Pointer<GArrayGArrayPoint>)>>('GArrayGArrayPoint_FromVec');
  late final _GArrayGArrayPoint_FromVec =
      _GArrayGArrayPoint_FromVecPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecVecPoint, ffi.Pointer<GArrayGArrayPoint>)>();

  ffi.Pointer<CvStatus> GArrayPoint2d_FromVec(
    VecPoint v,
    ffi.Pointer<GArrayPoint2d> rval,
  ) {
    return _GArrayPoint2d_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayPoint2d_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<GArrayPoint2d>)>>('GArrayPoint2d_FromVec');
  late final _GArrayPoint2d_FromVec = _GArrayPoint2d_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint2d>)>();

  ffi.Pointer<CvStatus> GArrayPoint2f_FromVec(
    VecPoint v,
    ffi.Pointer<GArrayPoint2f> rval,
  ) {
    return _GArrayPoint2f_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayPoint2f_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<GArrayPoint2f>)>>('GArrayPoint2f_FromVec');
  late final _GArrayPoint2f_FromVec = _GArrayPoint2f_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint2f>)>();

  ffi.Pointer<CvStatus> GArrayPoint2i_FromVec(
    VecPoint v,
    ffi.Pointer<GArrayPoint2i> rval,
  ) {
    return _GArrayPoint2i_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayPoint2i_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<GArrayPoint2i>)>>('GArrayPoint2i_FromVec');
  late final _GArrayPoint2i_FromVec = _GArrayPoint2i_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint2i>)>();

  ffi.Pointer<CvStatus> GArrayPoint3d_FromVec(
    VecPoint v,
    ffi.Pointer<GArrayPoint3d> rval,
  ) {
    return _GArrayPoint3d_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayPoint3d_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<GArrayPoint3d>)>>('GArrayPoint3d_FromVec');
  late final _GArrayPoint3d_FromVec = _GArrayPoint3d_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint3d>)>();

  ffi.Pointer<CvStatus> GArrayPoint3f_FromVec(
    VecPoint v,
    ffi.Pointer<GArrayPoint3f> rval,
  ) {
    return _GArrayPoint3f_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayPoint3f_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<GArrayPoint3f>)>>('GArrayPoint3f_FromVec');
  late final _GArrayPoint3f_FromVec = _GArrayPoint3f_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint3f>)>();

  ffi.Pointer<CvStatus> GArrayPoint3i_FromVec(
    VecPoint v,
    ffi.Pointer<GArrayPoint3i> rval,
  ) {
    return _GArrayPoint3i_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayPoint3i_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<GArrayPoint3i>)>>('GArrayPoint3i_FromVec');
  late final _GArrayPoint3i_FromVec = _GArrayPoint3i_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint3i>)>();

  ffi.Pointer<CvStatus> GArrayPoint_FromVec(
    VecPoint v,
    ffi.Pointer<GArrayPoint> rval,
  ) {
    return _GArrayPoint_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayPoint_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<GArrayPoint>)>>('GArrayPoint_FromVec');
  late final _GArrayPoint_FromVec = _GArrayPoint_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint>)>();

  ffi.Pointer<CvStatus> GArrayPrim_FromVec(
    VecPrim v,
    ffi.Pointer<GArrayPrim> rval,
  ) {
    return _GArrayPrim_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayPrim_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPrim, ffi.Pointer<GArrayPrim>)>>('GArrayPrim_FromVec');
  late final _GArrayPrim_FromVec = _GArrayPrim_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPrim, ffi.Pointer<GArrayPrim>)>();

  ffi.Pointer<CvStatus> GArrayVec4i_FromVec(
    VecVec4i v,
    ffi.Pointer<GArrayVec4i> rval,
  ) {
    return _GArrayVec4i_FromVec(
      v,
      rval,
    );
  }

  late final _GArrayVec4i_FromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecVec4i, ffi.Pointer<GArrayVec4i>)>>('GArrayVec4i_FromVec');
  late final _GArrayVec4i_FromVec = _GArrayVec4i_FromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecVec4i, ffi.Pointer<GArrayVec4i>)>();

  ffi.Pointer<CvStatus> Prim_from_Circle(
    CvPoint center,
    Scalar color,
    int lt,
    int radius,
    int shift,
    int thick,
    ffi.Pointer<Prim> rval,
  ) {
    return _Prim_from_Circle(
      center,
      color,
      lt,
      radius,
      shift,
      thick,
      rval,
    );
  }

  late final _Prim_from_CirclePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CvPoint, Scalar, ffi.Int, ffi.Int,
              ffi.Int, ffi.Int, ffi.Pointer<Prim>)>>('Prim_from_Circle');
  late final _Prim_from_Circle = _Prim_from_CirclePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          CvPoint, Scalar, int, int, int, int, ffi.Pointer<Prim>)>();

  ffi.Pointer<CvStatus> Prim_from_FText(
    ffi.Pointer<ffi.Char> text,
    int text_len,
    CvPoint org,
    int fh,
    Scalar color,
    ffi.Pointer<Prim> rval,
  ) {
    return _Prim_from_FText(
      text,
      text_len,
      org,
      fh,
      color,
      rval,
    );
  }

  late final _Prim_from_FTextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, ffi.Int,
              CvPoint, ffi.Int, Scalar, ffi.Pointer<Prim>)>>('Prim_from_FText');
  late final _Prim_from_FText = _Prim_from_FTextPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, int, CvPoint, int,
          Scalar, ffi.Pointer<Prim>)>();

  ffi.Pointer<CvStatus> Prim_from_Image(
    CvPoint org,
    Mat img,
    Mat alpha,
    ffi.Pointer<Prim> rval,
  ) {
    return _Prim_from_Image(
      org,
      img,
      alpha,
      rval,
    );
  }

  late final _Prim_from_ImagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CvPoint, Mat, Mat, ffi.Pointer<Prim>)>>('Prim_from_Image');
  late final _Prim_from_Image = _Prim_from_ImagePtr.asFunction<
      ffi.Pointer<CvStatus> Function(CvPoint, Mat, Mat, ffi.Pointer<Prim>)>();

  ffi.Pointer<CvStatus> Prim_from_Line(
    Scalar color,
    int lt,
    CvPoint pt1,
    CvPoint pt2,
    int shift,
    int thick,
    ffi.Pointer<Prim> rval,
  ) {
    return _Prim_from_Line(
      color,
      lt,
      pt1,
      pt2,
      shift,
      thick,
      rval,
    );
  }

  late final _Prim_from_LinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Scalar, ffi.Int, CvPoint, CvPoint,
              ffi.Int, ffi.Int, ffi.Pointer<Prim>)>>('Prim_from_Line');
  late final _Prim_from_Line = _Prim_from_LinePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Scalar, int, CvPoint, CvPoint, int, int, ffi.Pointer<Prim>)>();

  ffi.Pointer<CvStatus> Prim_from_Mosaic(
    int cellSz,
    int decim,
    CvRect mos,
    ffi.Pointer<Prim> rval,
  ) {
    return _Prim_from_Mosaic(
      cellSz,
      decim,
      mos,
      rval,
    );
  }

  late final _Prim_from_MosaicPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, CvRect,
              ffi.Pointer<Prim>)>>('Prim_from_Mosaic');
  late final _Prim_from_Mosaic = _Prim_from_MosaicPtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, int, CvRect, ffi.Pointer<Prim>)>();

  ffi.Pointer<CvStatus> Prim_from_Poly(
    VecPoint points,
    Scalar color,
    int thick,
    int lt,
    int shift,
    ffi.Pointer<Prim> rval,
  ) {
    return _Prim_from_Poly(
      points,
      color,
      thick,
      lt,
      shift,
      rval,
    );
  }

  late final _Prim_from_PolyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, Scalar, ffi.Int, ffi.Int,
              ffi.Int, ffi.Pointer<Prim>)>>('Prim_from_Poly');
  late final _Prim_from_Poly = _Prim_from_PolyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, Scalar, int, int, int, ffi.Pointer<Prim>)>();

  ffi.Pointer<CvStatus> Prim_from_Rect(
    Scalar color,
    int lt,
    CvRect rect,
    int shift,
    int thick,
    ffi.Pointer<Prim> rval,
  ) {
    return _Prim_from_Rect(
      color,
      lt,
      rect,
      shift,
      thick,
      rval,
    );
  }

  late final _Prim_from_RectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Scalar, ffi.Int, CvRect, ffi.Int,
              ffi.Int, ffi.Pointer<Prim>)>>('Prim_from_Rect');
  late final _Prim_from_Rect = _Prim_from_RectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Scalar, int, CvRect, int, int, ffi.Pointer<Prim>)>();

  ffi.Pointer<CvStatus> Prim_from_Text(
    bool bottom_left_origin,
    Scalar color,
    int ff,
    double fs,
    int lt,
    CvPoint org,
    ffi.Pointer<ffi.Char> text,
    int text_len,
    int thick,
    ffi.Pointer<Prim> rval,
  ) {
    return _Prim_from_Text(
      bottom_left_origin,
      color,
      ff,
      fs,
      lt,
      org,
      text,
      text_len,
      thick,
      rval,
    );
  }

  late final _Prim_from_TextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Bool,
              Scalar,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              CvPoint,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<Prim>)>>('Prim_from_Text');
  late final _Prim_from_Text = _Prim_from_TextPtr.asFunction<
      ffi.Pointer<CvStatus> Function(bool, Scalar, int, double, int, CvPoint,
          ffi.Pointer<ffi.Char>, int, int, ffi.Pointer<Prim>)>();

  ffi.Pointer<CvStatus> VecPrim_Append(
    VecPrim vec,
    Prim p,
  ) {
    return _VecPrim_Append(
      vec,
      p,
    );
  }
